libexec_DATA=blkid-plugin.py cups-plugin.py fstab-plugin.py            \
         hosts-plugin.py ifcfg-plugin.py lvm-plugin.py main-plugin.py  \
         meminfo-plugin.py modprobe-plugin.py mount-plugin.py          \
         multipath-plugin.py ocfs2-plugin.py oswbb-heartbeat-plugin.py \
         rpm-installed-plugin.py slabinfo-plugin.py superclass.py      \
         sysctl-plugin.py vmcfg-plugin.py vmstat-plugin.py
